--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -26,7 +26,7 @@ plex_enabled: false
 tautulli_enabled: false
 
 # Media Sourcing
-sonarr_enabled: false         # tv
+sonarr_enabled: false # tv
 sickchill_enabled: false
 couchpotato_enabled: false
 radarr_enabled: false
@@ -74,6 +74,9 @@ thelounge_enabled: false
 # Password Management
 bitwarden_enabled: false
 
+# SSO
+keycloak_enabled: false
+
 # Finance
 firefly_enabled: false
 
@@ -99,7 +102,7 @@ joomla_enabled: false
 serposcope_enabled: false
 
 # External Access
-# Traefik will allow access to certain applications externally. To enable this you'll either; a domain name that points to your 
+# Traefik will allow access to certain applications externally. To enable this you'll either; a domain name that points to your
 # home static IP address, the cloudflare with the cloudflare_ddns dynamic DNS container enabled, or use a dynamic DNS provider like no-ip.
 # You'll also need to map ports 80 and 443 from your router to your ansible-nas server, then enable the per-app "available_externally"
 # settings.
@@ -182,7 +185,7 @@ samba_server_string: Ansible NAS
 # Shares you want published over Samba.
 samba_shares:
   - name: downloads
-    comment: 'Stuff downloaded'
+    comment: "Stuff downloaded"
     guest_ok: yes
     public: yes
     writable: yes
@@ -190,7 +193,7 @@ samba_shares:
     path: "{{ downloads_root }}"
 
   - name: movies
-    comment: 'Movies'
+    comment: "Movies"
     guest_ok: yes
     public: yes
     writable: yes
@@ -198,7 +201,7 @@ samba_shares:
     path: "{{ movies_root }}"
 
   - name: tv
-    comment: 'TV Episodes'
+    comment: "TV Episodes"
     guest_ok: yes
     public: yes
     writable: yes
@@ -206,7 +209,7 @@ samba_shares:
     path: "{{ tv_root }}"
 
   - name: music
-    comment: 'Music'
+    comment: "Music"
     guest_ok: yes
     public: yes
     writable: yes
@@ -214,7 +217,7 @@ samba_shares:
     path: "{{ music_root }}"
 
   - name: podcasts
-    comment: 'Podcasts'
+    comment: "Podcasts"
     guest_ok: yes
     public: yes
     writable: yes
@@ -222,7 +225,7 @@ samba_shares:
     path: "{{ podcasts_root }}"
 
   - name: dump
-    comment: 'File dump'
+    comment: "File dump"
     guest_ok: yes
     public: yes
     writable: yes
@@ -230,7 +233,7 @@ samba_shares:
     path: "{{ samba_shares_root }}/dump"
 
   - name: games
-    comment: 'Games'
+    comment: "Games"
     guest_ok: yes
     public: yes
     writable: yes
@@ -238,7 +241,7 @@ samba_shares:
     path: "{{ samba_shares_root }}/games"
 
   - name: photos
-    comment: 'Pictures'
+    comment: "Pictures"
     guest_ok: yes
     public: yes
     writable: yes
@@ -246,7 +249,7 @@ samba_shares:
     path: "{{ samba_shares_root }}/photos"
 
   - name: books
-    comment: 'Books'
+    comment: "Books"
     guest_ok: yes
     public: yes
     writable: yes
@@ -254,7 +257,7 @@ samba_shares:
     path: "{{ samba_shares_root }}/books"
 
   - name: comics
-    comment: 'Comics'
+    comment: "Comics"
     guest_ok: yes
     public: yes
     writable: yes
@@ -328,9 +331,10 @@ samba_netbios_name: "{{ ansible_nas_hostname }}"
 ###
 ### Traefik
 ###
-traefik_docker_image: traefik:v1.7
+traefik_docker_image: traefik:v2.2
 traefik_data_directory: "{{ docker_home }}/traefik"
-traefik_debug: "false"
+traefik_log_level: "INFO"
+traefik_acme_staging: false
 
 ###
 ### Heimdall
@@ -437,7 +441,6 @@ tautulli_user_id: "0"
 tautulli_group_id: "0"
 tautulli_port: "8185"
 
-
 ###
 ### Duplicati
 ###
@@ -499,7 +502,7 @@ couchpotato_downloads_directory: "{{ downloads_root }}"
 couchpotato_torrents_directory: "{{ torrents_root }}"
 couchpotato_user_id: "0"
 couchpotato_group_id: "0"
-couchpotato_port: "5050" 
+couchpotato_port: "5050"
 
 ###
 ### Sickchill
@@ -511,7 +514,6 @@ sickchill_downloads_directory: "{{ downloads_root }}/completed"
 sickchill_user_id: "0"
 sickchill_group_id: "0"
 sickchill_port: "8081"
-
 
 ###
 ### Ombi
@@ -532,7 +534,6 @@ netdata_port: "19999"
 ###
 openvpn_config_directory: "{{ docker_home }}/openvpn"
 
-
 ###
 ### Portainer
 ###
@@ -548,7 +549,6 @@ znc_data_directory: "{{ docker_home }}/znc"
 znc_user_id: "0"
 znc_group_id: "0"
 znc_port: "6677"
-
 
 ###
 ### Stats
@@ -593,6 +593,17 @@ nextcloud_data_directory: "{{ docker_home }}/nextcloud"
 nextcloud_port: "8080"
 
 ###
+### KeyCloak
+###
+keycloak_available_externally: "false"
+keycloak_data_directory: "{{ docker_home }}/keycloak"
+keycloak_port: "389"
+keycloak_port_ssl: "636"
+keycloak_domain: "{{ ansible_nas_domain }}"
+keycloak_proxy_client_id: ""
+keycloak_proxy_secret: ""
+
+###
 ### nginx
 ###
 nginx_data_directory: "{{ docker_home }}/nginx"
@@ -623,7 +634,6 @@ airsonic_data_directory: "{{ docker_home }}/airsonic"
 airsonic_music_directory: "{{ music_root }}"
 airsonic_podcasts_directory: "{{ podcasts_root }}"
 airsonic_port: "4040"
-
 
 ###
 ### CloudCmd
