--- a/nas.yml
+++ b/nas.yml
@@ -22,208 +22,212 @@
         - skip_ansible_lint
 
   tasks:
-  - import_tasks: tasks/general.yml
-    tags: general
+    - import_tasks: tasks/general.yml
+      tags: general
 
-  - import_tasks: tasks/docker.yml
-    tags: docker
+    - import_tasks: tasks/docker.yml
+      tags: docker
 
-  - import_tasks: tasks/portainer.yml
-    when: (portainer_enabled | default(False))
-    tags: portainer
+    - import_tasks: tasks/portainer.yml
+      when: (portainer_enabled | default(False))
+      tags: portainer
 
-  - import_tasks: tasks/traefik.yml
-    when: (traefik_enabled | default(False))
-    tags: traefik
+    - import_tasks: tasks/traefik.yml
+      when: (traefik_enabled | default(False))
+      tags: traefik
 
-  - import_tasks: tasks/heimdall.yml
-    when: (heimdall_enabled | default(False))
-    tags: heimdall
+    - import_tasks: tasks/heimdall.yml
+      when: (heimdall_enabled | default(False))
+      tags: heimdall
 
-  - import_tasks: tasks/watchtower.yml
-    when: (watchtower_enabled | default(False))
-    tags: watchtower
+    - import_tasks: tasks/watchtower.yml
+      when: (watchtower_enabled | default(False))
+      tags: watchtower
 
-  - import_tasks: tasks/plex.yml
-    when: (plex_enabled | default(False))
-    tags: plex
+    - import_tasks: tasks/plex.yml
+      when: (plex_enabled | default(False))
+      tags: plex
 
-  - import_tasks: tasks/firefly.yml
-    when: (firefly_enabled | default(False))
-    tags: firefly
+    - import_tasks: tasks/firefly.yml
+      when: (firefly_enabled | default(False))
+      tags: firefly
 
-  - import_tasks: tasks/emby.yml
-    when: (emby_enabled | default(False))
-    tags: emby
+    - import_tasks: tasks/emby.yml
+      when: (emby_enabled | default(False))
+      tags: emby
 
-  - import_tasks: tasks/tautulli.yml
-    when: (tautulli_enabled | default(False))
-    tags: tautulli
+    - import_tasks: tasks/tautulli.yml
+      when: (tautulli_enabled | default(False))
+      tags: tautulli
 
-  - import_tasks: tasks/transmission.yml
-    when: (transmission_enabled | default(False))
-    tags: transmission
+    - import_tasks: tasks/transmission.yml
+      when: (transmission_enabled | default(False))
+      tags: transmission
 
-  - import_tasks: tasks/transmission_with_openvpn.yml
-    when: (transmission_with_openvpn_enabled | default(False))
-    tags: transmission
+    - import_tasks: tasks/transmission_with_openvpn.yml
+      when: (transmission_with_openvpn_enabled | default(False))
+      tags: transmission
 
-  - import_tasks: tasks/pyload.yml
-    when: (pyload_enabled | default(False))
-    tags: pyload
+    - import_tasks: tasks/pyload.yml
+      when: (pyload_enabled | default(False))
+      tags: pyload
 
-  - import_tasks: tasks/thelounge.yml
-    when: (thelounge_enabled | default(False))
-    tags: thelounge
+    - import_tasks: tasks/thelounge.yml
+      when: (thelounge_enabled | default(False))
+      tags: thelounge
 
-  - import_tasks: tasks/sonarr.yml
-    when: (sonarr_enabled | default(False))
-    tags: sonarr
+    - import_tasks: tasks/sonarr.yml
+      when: (sonarr_enabled | default(False))
+      tags: sonarr
 
-  - import_tasks: tasks/radarr.yml
-    when: (radarr_enabled | default(False))
-    tags: radarr
+    - import_tasks: tasks/radarr.yml
+      when: (radarr_enabled | default(False))
+      tags: radarr
 
-  - import_tasks: tasks/glances.yml
-    when: (glances_enabled | default(False))
-    tags: glances
+    - import_tasks: tasks/glances.yml
+      when: (glances_enabled | default(False))
+      tags: glances
 
-  - import_tasks: tasks/netdata.yml
-    when: (netdata_enabled | default(False))
-    tags: netdata
+    - import_tasks: tasks/netdata.yml
+      when: (netdata_enabled | default(False))
+      tags: netdata
 
-  - import_tasks: tasks/duplicati.yml
-    when: (duplicati_enabled | default(False))
-    tags: duplicati
+    - import_tasks: tasks/duplicati.yml
+      when: (duplicati_enabled | default(False))
+      tags: duplicati
 
-  - import_tasks: tasks/couchpotato.yml
-    when: (couchpotato_enabled | default(False))
-    tags: couchpotato
+    - import_tasks: tasks/couchpotato.yml
+      when: (couchpotato_enabled | default(False))
+      tags: couchpotato
 
-  - import_tasks: tasks/sickchill.yml
-    when: (sickchill_enabled | default(False))
-    tags: sickchill
+    - import_tasks: tasks/sickchill.yml
+      when: (sickchill_enabled | default(False))
+      tags: sickchill
 
-  - import_tasks: tasks/znc.yml
-    when: (znc_enabled | default(False))
-    tags: znc
+    - import_tasks: tasks/znc.yml
+      when: (znc_enabled | default(False))
+      tags: znc
 
-  - import_tasks: tasks/miniflux.yml
-    when: (miniflux_enabled | default(False))
-    tags: miniflux
+    - import_tasks: tasks/miniflux.yml
+      when: (miniflux_enabled | default(False))
+      tags: miniflux
 
-  - import_tasks: tasks/nextcloud.yml
-    when: (nextcloud_enabled | default(False))
-    tags: nextcloud
+    - import_tasks: tasks/nextcloud.yml
+      when: (nextcloud_enabled | default(False))
+      tags: nextcloud
 
-  - import_tasks: tasks/gitea.yml
-    when: (gitea_enabled | default(False))
-    tags: gitea
+    - import_tasks: tasks/keycloak.yml
+      when: (keycloak_enabled | default(False))
+      tags: keycloak
 
-  - import_tasks: tasks/gitlab.yml
-    when: (gitlab_enabled | default(False))
-    tags: gitlab
+    - import_tasks: tasks/gitea.yml
+      when: (gitea_enabled | default(False))
+      tags: gitea
 
-  - import_tasks: tasks/timemachine.yml
-    when: (timemachine_enabled | default(False))
-    tags: timemachine
+    - import_tasks: tasks/gitlab.yml
+      when: (gitlab_enabled | default(False))
+      tags: gitlab
 
-  - import_tasks: tasks/stats.yml
-    when: (stats_enabled | default(False))
-    tags: stats
+    - import_tasks: tasks/timemachine.yml
+      when: (timemachine_enabled | default(False))
+      tags: timemachine
 
-  - import_tasks: tasks/guacamole.yml
-    when: (guacamole_enabled | default(False))
-    tags: guacamole
+    - import_tasks: tasks/stats.yml
+      when: (stats_enabled | default(False))
+      tags: stats
 
-  - import_tasks: tasks/airsonic.yml
-    when: (airsonic_enabled | default(False))
-    tags: airsonic
+    - import_tasks: tasks/guacamole.yml
+      when: (guacamole_enabled | default(False))
+      tags: guacamole
 
-  - import_tasks: tasks/cloudflare_ddns.yml
-    when: (cloudflare_ddns_enabled | default(False))
-    tags: cloudflare_ddns
+    - import_tasks: tasks/airsonic.yml
+      when: (airsonic_enabled | default(False))
+      tags: airsonic
 
-  - import_tasks: tasks/minidlna.yml
-    when: (minidlna_enabled | default(False))
-    tags: minidlna
+    - import_tasks: tasks/cloudflare_ddns.yml
+      when: (cloudflare_ddns_enabled | default(False))
+      tags: cloudflare_ddns
 
-  - import_tasks: tasks/get_iplayer.yml
-    when: (get_iplayer_enabled | default(False))
-    tags: get_iplayer
+    - import_tasks: tasks/minidlna.yml
+      when: (minidlna_enabled | default(False))
+      tags: minidlna
 
-  - import_tasks: tasks/mymediaforalexa.yml
-    when: (mymediaforalexa_enabled | default(False))
-    tags: mymediaforalexa
+    - import_tasks: tasks/get_iplayer.yml
+      when: (get_iplayer_enabled | default(False))
+      tags: get_iplayer
 
-  - import_tasks: tasks/jackett.yml
-    when: (jackett_enabled | default(False))
-    tags: jackett
+    - import_tasks: tasks/mymediaforalexa.yml
+      when: (mymediaforalexa_enabled | default(False))
+      tags: mymediaforalexa
 
-  - import_tasks: tasks/joomla.yml
-    when: (joomla_enabled | default(False))
-    tags: joomla
+    - import_tasks: tasks/jackett.yml
+      when: (jackett_enabled | default(False))
+      tags: jackett
 
-  - import_tasks: tasks/bitwarden.yml
-    when: (bitwarden_enabled | default(False))
-    tags: bitwarden
+    - import_tasks: tasks/joomla.yml
+      when: (joomla_enabled | default(False))
+      tags: joomla
 
-  - import_tasks: tasks/nzbget.yml
-    when: (nzbget_enabled | default(False))
-    tags: nzbget
+    - import_tasks: tasks/bitwarden.yml
+      when: (bitwarden_enabled | default(False))
+      tags: bitwarden
 
-  - import_tasks: tasks/wallabag.yml
-    when: (wallabag_enabled | default(False))
-    tags: wallabag
+    - import_tasks: tasks/nzbget.yml
+      when: (nzbget_enabled | default(False))
+      tags: nzbget
 
-  - import_tasks: tasks/mosquitto.yml
-    when: (mosquitto_enabled | default(False))
-    tags: mosquitto
+    - import_tasks: tasks/wallabag.yml
+      when: (wallabag_enabled | default(False))
+      tags: wallabag
 
-  - import_tasks: tasks/homebridge.yml
-    when: (homebridge_enabled | default(False))
-    tags: homebridge
+    - import_tasks: tasks/mosquitto.yml
+      when: (mosquitto_enabled | default(False))
+      tags: mosquitto
 
-  - import_tasks: tasks/calibre.yml
-    when: (calibre_enabled | default(False))
-    tags: calibre
+    - import_tasks: tasks/homebridge.yml
+      when: (homebridge_enabled | default(False))
+      tags: homebridge
 
-  - import_tasks: tasks/homeassistant.yml
-    when: (homeassistant_enabled | default(False))
-    tags: homeassistant
+    - import_tasks: tasks/calibre.yml
+      when: (calibre_enabled | default(False))
+      tags: calibre
 
-  - import_tasks: tasks/bazarr.yml
-    when: (bazarr_enabled | default(False))
-    tags: bazarr
+    - import_tasks: tasks/homeassistant.yml
+      when: (homeassistant_enabled | default(False))
+      tags: homeassistant
 
-  - import_tasks: tasks/openhab.yml
-    when: (openhab_enabled | default(False))
-    tags: openhab
+    - import_tasks: tasks/bazarr.yml
+      when: (bazarr_enabled | default(False))
+      tags: bazarr
 
-  - import_tasks: tasks/jellyfin.yml
-    when: (jellyfin_enabled | default(False))
-    tags: jellyfin
+    - import_tasks: tasks/openhab.yml
+      when: (openhab_enabled | default(False))
+      tags: openhab
 
-  - import_tasks: tasks/cloudcmd.yml
-    when: (cloudcmd_enabled | default(False))
-    tags: cloudcmd
+    - import_tasks: tasks/jellyfin.yml
+      when: (jellyfin_enabled | default(False))
+      tags: jellyfin
 
-  - import_tasks: tasks/ubooquity.yml
-    when: (ubooquity_enabled | default(False))
-    tags: ubooquity
+    - import_tasks: tasks/cloudcmd.yml
+      when: (cloudcmd_enabled | default(False))
+      tags: cloudcmd
 
-  - import_tasks: tasks/ombi.yml
-    when: (ombi_enabled | default(False))
-    tags: ombi
+    - import_tasks: tasks/ubooquity.yml
+      when: (ubooquity_enabled | default(False))
+      tags: ubooquity
 
-  - import_tasks: tasks/lidarr.yml
-    when: (lidarr_enabled | default(False))
-    tags: lidarr
+    - import_tasks: tasks/ombi.yml
+      when: (ombi_enabled | default(False))
+      tags: ombi
 
-  - import_tasks: tasks/serposcope.yml
-    when: (serposcope_enabled | default(False))
-    tags: serposcope
+    - import_tasks: tasks/lidarr.yml
+      when: (lidarr_enabled | default(False))
+      tags: lidarr
 
-  - import_tasks: tasks/virtual_desktop.yml
-    when: (virtual_desktop_enabled | default(False))
-    tags: virtual_desktop
+    - import_tasks: tasks/serposcope.yml
+      when: (serposcope_enabled | default(False))
+      tags: serposcope
+
+    - import_tasks: tasks/virtual_desktop.yml
+      when: (virtual_desktop_enabled | default(False))
+      tags: virtual_desktop
