Add SoftEther to vpn playbook

--- a/group_vars/vpn.yml
+++ b/group_vars/vpn.yml
@@ -9,10 +9,11 @@ wireguard_port: "51820"
 # The default interface name that wireguard should use if not specified otherwise.
 wireguard_interface: "wg0"
 
-wireguard_preup:
-  - echo 1 > /proc/sys/net/ipv4/ip_forward
+wireguard_preup: []
+#  - echo 1 > /proc/sys/net/ipv4/ip_forward
 
 wireguard_postup:
+  - 
   - iptables -A FORWARD -i %i -j ACCEPT
   - iptables -A FORWARD -o %i -j ACCEPT
 
