--- a/vpn.yml
+++ b/vpn.yml
@@ -1,42 +1,78 @@
 ---
-- import_playbook: bootstrap.yml
-
 - hosts: all
 
   roles:
     - role: githubixx.ansible_role_wireguard
       tags: wireguard
 
+    - role: softasap.sa-vpn-softether
+      tags: sofether
+      softether_option_securenat: false
+      softether_option_bridge: true
+
+      # ============== IPSEC ===================
+      softether_option_ipsec: true
+      softether_ipsec_l2tp: yes
+      softether_ipsec_l2tpraw: no
+      softether_ipsec_etherip: no
+      softether_ipsec_presharedkey: "PSK_CHANGE_IT"
+      # /============== IPSEC ===================
+
+      # ============== OPENVPN ===================
+      softether_option_openvpn: true
+      softether_openvpn_port: 1194
+      softether_openvpn_config: "{{softether_home}}/generated/openvpn_config.zip"
+      # /============== OPENVPN ===================
+
+      # ============== Bridge ===================
+      softether_bridge_device: soft
+      softether_bridge_tap: yes
+      # ============== /Bridge ===================
+
+      # ============== Users ===================
+      softether_vpn_users: []
+      # ============== /Users ===================
+      softether_sysctl_conf_lines: []
+
   tasks:
+    - name: sysctl | net.ipv4.ip_forward = 1
+      sysctl:
+          name: net.ipv4.ip_forward
+          reload: yes
+          state: present
+          value: '1'
+
     - name: wireguard | stop service before firewall configuration
       tags: firewall
       systemd:
         name: "wg-quick@{{wireguard_interface}}"
         state: stopped
 
-    - name: firewalld | open ssh port
+    - name: ufw | open ssh port
       tags: firewall
-      firewalld:
-        service: ssh
-        permanent: yes
-        state: enabled
-        zone: public
+      ufw:
+        rule: limit
+        port: ssh
+        proto: tcp
 
-    - name: firewalld | open wireguard port
+    - name: ufw | open wireguard port
       tags: firewall
-      firewalld:
-        port: "{{ wireguard_port }}/udp"
-        permanent: yes
-        state: enabled
-        zone: public
+      ufw:
+        port: "{{ wireguard_port }}"
+        rule: allow
+        proto: udp
 
-    - name: firewalld | enable masquerade
+    - name: iptables | add masquerade rule
+      command: /sbin/iptables -t nat -A POSTROUTING -o {{ external_interface | default('eth0') }} -j MASQUERADE
       tags: firewall
-      firewalld:
-        permanent: yes
-        masquerade: "yes"
-        state: enabled
-        zone: public
+
+    - name: iptables | save rules
+      command: iptables-save
+      tags: firewall
+
+    - name: ufw | restart firewall
+      service: name=ufw state=restarted
+      tags: firewall
 
     - name: wireguard | start service after firewall configuration
       tags: firewall
