--- a/tasks/homeassistant.yml
+++ b/tasks/homeassistant.yml
@@ -17,9 +17,8 @@
     env:
       TZ: "{{ ansible_nas_timezone }}"
     labels:
-      traefik.backend: "homeassistant"
-      traefik.frontend.rule: "Host:homeassistant.{{ ansible_nas_domain }}"
       traefik.enable: "{{ homeassistant_available_externally }}"
-      traefik.port: "8123"
-      traefik.frontend.headers.SSLRedirect: "true"
+      traefik.http.services.homeassistant-svc.loadbalancer.server.port: "8123"
+      traefik.http.routers.homeassistant.rule: "Host(`hass.{{ ansible_nas_domain }}`)"
+      traefik.http.routers.homeassistant.tls: "true"
     memory: 1g
