--- a/tasks/traefik.yml
+++ b/tasks/traefik.yml
@@ -63,6 +63,8 @@
     env:
       CF_API_EMAIL: "{{ ansible_nas_email }}"
       CF_API_KEY: "{{ cloudflare_api_key }}"
+    etc_hosts:
+      host.docker.internal: "172.17.0.1"
     labels:
       traefik.enable: "true"
       traefik.http.routers.api.rule: "Host(`traefik.{{ ansible_nas_domain }}`)"
