--- a/tasks/airsonic.yml
+++ b/tasks/airsonic.yml
@@ -8,6 +8,12 @@
     - "{{ airsonic_data_directory }}/data"
     - "{{ airsonic_data_directory }}/playlists"
 
+# How to setup LDAP for airsonic:
+# Settings -> Advanced -> Enable LDAP authentication
+# LDAP URL: ldap://openldap:389/ou=users,dc=example,dc=org
+# LDAP search filter: (&(objectclass=inetOrgPerson)(|(uid={0})(mail={0})))
+# LDAP manager DN: Username: cn=readonly,dc=example,dc=org
+# Password: [located in file docker/ldap/creds/ldap_readonly_passwd]
 - name: Airsonic Docker Container
   docker_container:
     name: airsonic
@@ -18,13 +24,17 @@
       - "{{ airsonic_data_directory }}/playlists:/airsonic/playlists:rw"
       - "{{ airsonic_music_directory }}:/airsonic/music:rw"
       - "{{ airsonic_podcasts_directory }}:/airsonic/podcasts:rw"
+    networks:
+      - name: ldap
+      - name: web
+    env:
+      JAVA_OPTS: "-Dserver.use-forward-headers=true -Dserver.context-path=/"
     ports:
       - "{{ airsonic_port }}:4040"
     restart_policy: unless-stopped
     memory: 1g
     labels:
-      traefik.backend: "airsonic"
-      traefik.frontend.rule: "Host:airsonic.{{ ansible_nas_domain }}"
       traefik.enable: "{{ airsonic_available_externally }}"
-      traefik.port: "4040"
-
+      traefik.http.services.airsonic-svc.loadbalancer.server.port: "4040"
+      traefik.http.routers.airsonic.rule: "Host(`airsonic.{{ ansible_nas_domain }}`)"
+      traefik.http.routers.airsonic.tls: "true"
